# rl-algorithms

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  todo  todo.txt
a2c/: a2c_agent.py  hyperparams.json  main.py  model.py  models.py  run.py
a3c/: a3c_agent.py  model.py  run.py  shared_adam.py
actor_critic/: ac_agent.py  run.py
apex-dqn/: actor.py  learner.py  replay_buffer.py  run.py
common/: models.py  normalizer.py  utils.py
ddpg/: ddpg_agent.py  hyperparams.json  main.py  model.py  models.py  run.py
ddpg_her/: ddpg_agent.py  ddpg_her_agent.py  replay_buffer.py  run.py  run_easy.py  run_gym.py  run_rlbench.py
ddqn/: ddqn_agent.py  hyperparams.json  main.py  model.py  run.py
ddqn_dueling_per/: ddqn_dueling_per_agent.py  dueling_model.py  prioritized_replay_buffer.py  run.py
double_dqn/: double_dqn_agent.py  hyperparams.json  main.py
dqn/: dqn_agent.py  hyperparams.json  main.py  model.py  replay_buffer.py  run.py
dqn_her/: bit_flipping_env.py  dqn_her_agent.py  model.py  run.py
dueling_dqn/: dueling_dqn_agent.py  hyperparams.json  main.py  model.py
dueling_network/: dueling_agent.py  run.py
her_td3/: her_td3_agent.py  hyperparams.json  main.py  models.py  normalizer.py
maddpg/: agent.py  ma_replay_buffer.py  maddpg.py  model.py  run.py
per/: per_agent.py  run.py
ppo/: hyperparams.json  main.py  models.py  ppo_agent.py
prioritized_dqn/: hyperparams.json  main.py  model.py  prioritized_dqn_agent.py  sum_tree.py
prioritized_experience_replay/: per_agent.py  prioritized_replay_buffer.py
reinforce/: main.py  (+4 more)
(+38 files in other folders)
