[tool.poetry]
name = "rl-algorithms"
version = "0.1.0"
description = ""
authors = ["Anil Zeybek <anil.zeybek98@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
numpy = "^1.22.2"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.10.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
gym = "^0.21.0"
Box2D = "^2.3.10"
cpprb = "^10.5.1"
pyglet = "^1.5.21"
mujoco-py = "^2.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
